@@ -289,10 +289,11 @@
     <Component class="javax.swing.JComboBox" name="comboBoxGameType">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
+          <StringArray count="4">
             <StringItem index="0" value="Survival"/>
             <StringItem index="1" value="Creative"/>
             <StringItem index="2" value="Adventure"/>
+            <StringItem index="3" value="Hardcore"/>
           </StringArray>
         </Property>
       </Properties>
